<resources>
    <string name="app_name">test_2_2</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="select_time">Выбрать время</string>
    <string name="arrival_time">Arrival time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forward">Далее</string>
    <string name="end_registration">Завершить регистрацию</string>
    <string name="visitor_list">visitor[]</string>
</resources>